--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -4,6 +4,6 @@ parameters:
         - src
     ignoreErrors:
         -
-            message: "#^Call to an undefined method Symfony\\\\Component\\\\Config\\\\Definition\\\\Builder\\\\NodeParentInterface\\:\\:arrayNode\\(\\)\\.$#"
+            message: "#^Call to an undefined method Symfony\\\\Component\\\\Config\\\\Definition\\\\Builder\\\\NodeDefinition\\:\\:children\\(\\)\\.$#"
             count: 1
-            path: src/DependencyInjection/MinifyExtension.php
+            path: src/WggMinifyBundle.php
